--- a/FrontEnd LSTI/kelengkapan.html
+++ b/FrontEnd LSTI/kelengkapan.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="widh=device-width,initial-scale=1.0">
   <link rel="stylesheet" href="css/style_kelengkapan.css">
-  <title> Registrasi Pegawai </title>
+  <title> Kelengkapan  </title>
   <style>
     @font-face {
       font-family: Lato;
